# interval-examples

account-migration-tutorial/javascript/: .gitignore
account-migration-tutorial/typescript/: README.md
account-migration/javascript/: package.json
account-migration/typescript/: package.json
account-migration/typescript/src/: index.ts
ai-portraits/python/: README.md  main.py
basic/javascript/: package.json
basic/javascript/routes/: hello_world.js
basic/python/: README.md  main.py  pyproject.toml  requirements.txt
basic/typescript/: package.json
github-issue-editor/javascript/: package.json
github-issue-editor/javascript/routes/: edit_github_issues.js
github-issue-editor/typescript/: package.json
metrics-notifier/javascript/: package.json
metrics-notifier/javascript/routes/: post_metrics.js
metrics-notifier/typescript/: package.json
qr-codes/javascript/: index.js  package.json
qr-codes/javascript/routes/: generate_qr_code.js
qr-codes/typescript/: package.json
refund-charges/javascript/: index.js  package.json
refund-charges/python/: main.py  payments.py  pyproject.toml  requirements.txt
refund-charges/typescript/: package.json
refund-charges/typescript/src/: index.ts
transcribe-audio/python/: main.py  pyproject.toml  requirements.txt
user-settings/javascript/: package.json
user-settings/javascript/routes/: user_settings.js
user-settings/typescript/: package.json  tsconfig.json
user-settings/typescript/src/: index.ts
web-screenshot-comparison/javascript/: package.json
web-screenshot-comparison/typescript/: package.json
(+13 files in other folders)
